# miniC

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/: CMakeLists.txt  hello.lex  hello.lex.c  miniC.y
include/: globals.h  scan.h  util.h
include/BuildEeyore/: globals.h
include/RegAllocate/: expression_types.hpp  function_block.hpp  util.hpp
include/Riscv/: method.hpp
lex/: CMakeLists.txt  Eeyore.l  Eeyore.y  miniC.l  miniC.lex  miniC.y  tigger.l  tigger.y
lib/: miniCIO.c  miniCIO.s
scripts/: CRiscv.sh  CTigger.sh  RunRiscv.sh  minicc.sh  score.py
src/: main.c  scan.c  util.c
src/BuildEeyore/: scan.c  util.c
src/RegAllocate/: expression_types.cpp  function_block.cpp  main.cpp  util.cpp
src/Riscv/: main.cpp  method.cpp
test/: Tigger  and.c  and.in  costflow.c  costflow.in  gcd.c  gcd.in  gcd.out  lis0.in  lis1.in  lis2.in  lis3.in  lis4.in  lis5.in  lis6.in  lis7.c  lis7.in  lis8.in  lis9.in  many.c  score.py  test.c  test.cpp  test2.c  test2.in  test3.c  test3.out
